[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
exclude = [
    "src/NLEval/graph/",
    "src/NLEval/valsplit/",
    "src/NLEval/metrics.py",
]

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = [
    "pytest-cov",
    "pytest-subtests",
]

addopts = [
    "--strict-markers",
    "-m",
    "not longruns",
]
markers = [
    "longruns",
    "highmemory",
]
