[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
exclude = [
    "src/NLEval/graph/",
    "src/NLEval/valsplit/",
    "src/NLEval/metrics.py",
]

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = [
    "pytest-cov",
    "pytest-mock",
    "pytest-subtests",
]

addopts = [
    "--strict-markers",
    "-m",
    "not longruns and not mediumruns",
]
markers = [
    "longruns",
    "mediumruns",
    "highmemory",
]
