[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nleval"
version = "0.1.0-dev3"
description = "A Python toolkit for biological network learning evaluation"
readme = "README.md"

authors = [
    {name = "Remy Liu", email = "liurenmi@msu.edu"},
]
license = {text = "MIT"}

requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "Data Processing",
    "Gene Classification",
    "Machine Learning",
    "Network Biology",
    "Network Repositories",
]

dependencies = [
    "mygene",
    "ndex2",
    "numpy>=1.20.0",
    "pyyaml",
    "scikit-learn>=1.0.0",
    "scipy",
    "tqdm",
]

[project.urls]
home = "https://github.com/krishnanlab/NetworkLearningEval"
bug-tracker = "https://github.com/krishnanlab/NetworkLearningEval/issues"

[project.optional-dependencies]
dev = [
    "bump2version",
    "parameterized",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-subtests",
    "pytest-xdist",
    "tox",
]
pyroe = [
    "pyroe",
    "scanpy",
]
full = ["nleval[pyroe]"]

[tool.setuptools]
license-files = ["LICENSE"]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false  # disable scanning PEP 420 namespaces

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
exclude = [
    "src/nleval/graph/",
]

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = [
    "pytest-cov",
    "pytest-mock",
    "pytest-subtests",
]

addopts = [
    "--strict-markers",
    "-m",
    "not longruns and not mediumruns",
]
markers = [
    "longruns",
    "mediumruns",
    "highmemory",
]
