[metadata]
name = NLEval
version = 0.0.2-dev
author = Remy Liu
description = Network learning evaluation
long_description = file: README.md
long_description_context_type = text/markdown
license = MIT
license_file = LICENSE

[options]
install_requires =
    numpy >= 1.20.0
    scikit-learn >= 1.0.0
    tqdm >= 4.60.0
    ndex2 >= 3.4.0
    mygene >= 3.2.2

zip_safe = false
include_package_data = True
python_requires = >=3.8

packages = find:
package_dir =
    = src

[options.extras_require]
dev =
    tox
    parameterized
    pre-commit
    pytest
    pytest-cov
    pytest-subtests

[options.packages.find]
where = src
