[metadata]
name = nleval
version = 0.1.0-dev1
description = Network learning evaluation
long_description = file: README.md
long_description_content_type = text/markdown

# Author
author = Remy Liu
author_email = liurenmi@.msu.edu

# Links
url = https://github.com/krishnanlab/NetworkLearningEval

# License
license = MIT
license_files = LICENSE

# Tags
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Network Biology
    Gene Classification
    Data Processing
    Network Repositories
    Machine Learning

[options]
install_requires =
    mygene >= 3.2.2
    ndex2 >= 3.4.0
    numpy >= 1.20.0
    pyyaml
    scikit-learn >= 1.0.0
    scipy
    tqdm >= 4.60.0

zip_safe = false
include_package_data = True
python_requires = >=3.8

packages = find:
package_dir =
    = src

[options.extras_require]
dev =
    bump2version
    tox
    parameterized
    pre-commit
    pytest
    pytest-cov
    pytest-mock
    pytest-subtests
    pytest-xdist
pyroe =
    pyroe
    scanpy
all =
    nleval[pyroe]

[options.packages.find]
where = src
